WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186950
Regression(
r230211
): Crash under WebInspectorClient::~WebInspectorClient()
https://bugs.webkit.org/show_bug.cgi?id=186950
Summary
Regression(r230211): Crash under WebInspectorClient::~WebInspectorClient()
Chris Dumez
Reported
2018-06-22 16:52:45 PDT
Crash under WebInspectorClient::~WebInspectorClient(): Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebKit 0x00007fff45ba9a80 WebKit::WebInspectorClient::~WebInspectorClient() + 196 1 com.apple.WebKit 0x00007fff4596781c WebKit::WebInspectorClient::~WebInspectorClient() + 14 2 com.apple.WebCore 0x00007fff43fe83bb WebCore::InspectorController::inspectedPageDestroyed() + 27 3 com.apple.WebCore 0x00007fff43fe7544 WebCore::Page::~Page() + 308 4 com.apple.WebKit 0x00007fff45bcd90e WebKit::DeferredPageDestructor::tryDestruction() + 116 5 com.apple.WebKit 0x00007fff459666c6 WebKit::WebPage::close() + 980 6 com.apple.WebKit 0x00007fff45a10b7d IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) + 127 7 com.apple.WebKit 0x00007fff45c4c0d8 WebKit::WebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) + 28 8 com.apple.WebKit 0x00007fff459df53b IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) + 119 9 com.apple.WebKit 0x00007fff459e204f IPC::Connection::dispatchOneMessage() + 177 10 com.apple.JavaScriptCore 0x00007fff3a1276f7 WTF::RunLoop::performWork() + 231 11 com.apple.JavaScriptCore 0x00007fff3a127982 WTF::RunLoop::performWork(void*) + 34 12 com.apple.CoreFoundation 0x00007fff368601b0 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17 13 com.apple.CoreFoundation 0x00007fff368ffc4d __CFRunLoopDoSource0 + 108 14 com.apple.CoreFoundation 0x00007fff36847300 __CFRunLoopDoSources0 + 206 15 com.apple.CoreFoundation 0x00007fff368468ac __CFRunLoopRun + 1239 16 com.apple.CoreFoundation 0x00007fff368461b7 CFRunLoopRunSpecific + 500 17 com.apple.Foundation 0x00007fff38c92a69 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 212 18 com.apple.Foundation 0x00007fff38c92982 -[NSRunLoop(NSRunLoop) run] + 76 19 libxpc.dylib 0x00007fff643a5434 _xpc_objc_main + 547 20 libxpc.dylib 0x00007fff643a409e xpc_main + 433 21 com.apple.WebKit.WebContent 0x000000010daf4649 0x10daf3000 + 5705 22 libdyld.dylib 0x00007fff6415b0d1 start + 1
Attachments
Patch
(1.56 KB, patch)
2018-06-22 16:54 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-06-22 16:53:04 PDT
<
rdar://problem/40602069
>
Chris Dumez
Comment 2
2018-06-22 16:54:08 PDT
Created
attachment 343396
[details]
Patch
Chris Dumez
Comment 3
2018-06-22 18:31:49 PDT
Comment on
attachment 343396
[details]
Patch Clearing flags on attachment: 343396 Committed
r233118
: <
https://trac.webkit.org/changeset/233118
>
Chris Dumez
Comment 4
2018-06-22 18:31:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug