Regression(r230211): Crash under WebInspectorClient::~WebInspectorClient() https://bugs.webkit.org/show_bug.cgi?id=186950 <rdar://problem/40602069>

Reviewed by Darin Adler.

Re-introduce null-check that was accidentally dropped in r230211.

* WebProcess/WebCoreSupport/WebInspectorClient.cpp:
(WebKit::WebInspectorClient::~WebInspectorClient):

Canonical link: https://commits.webkit.org/202210@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233118 268f45cc-cd09-0410-ab3c-d52691b4dbfc